added the isVerified permission class and api endpoint to verify the provided email of the user
